--- a/Src/Landing.html
+++ b/Src/Landing.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../Styling/Base-styling.css">
     <meta charset="UTF-8">
     <title>DnD-MapTool</title>
 </head>
 <header>
-
+    <nav class="header-links">
+        <h1>BlackWhisky</h1>
+        <ul>
+            <li><A>Tool1</A></li>
+            <li><A>Tool2</A></li>
+            <li><A>Tool3</A></li>
+        </ul>
+    </nav>
 </header>
 <main>
 
