Wat kleine toevoegingen aan HTML en CSS Font selected

--- a/Src/Landing.html
+++ b/Src/Landing.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap');
+    </style>
     <link rel="stylesheet" href="../Styling/Base-styling.css">
     <meta charset="UTF-8">
     <title>DnD-MapTool</title>
@@ -16,7 +19,7 @@
     </nav>
 </header>
 <main>
-
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci animi atque consectetur deleniti dolorem, doloribus dolorum est eum eveniet exercitationem expedita fuga inventore itaque maxime mollitia nam necessitatibus perspiciatis quaerat quasi, quisquam quod quos repellendus sed similique soluta ut vero. Accusantium aperiam consequuntur cupiditate deserunt doloremque dolorum eos et id illum in, labore laudantium natus optio ratione sequi vero, voluptatem!</p>
 </main>
 <footer>
 
