--- a/Src/index.html
+++ b/Src/index.html
@@ -4,7 +4,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Edu+VIC+WA+NT+Beginner:wght@500&display=swap');
     </style>
-    <link rel="stylesheet" href="../Styling/Base-styling.css">
+    <link rel="stylesheet" href="../Styling/main-styling.css">
     <meta charset="UTF-8">
     <title>DnD-MapTool</title>
 </head>
