afbeeldingen geplaatst met fullscreen functie

--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,19 @@
             <li><A>Tool1</A></li>
             <li><A>Tool2</A></li>
             <li><A>Tool3</A></li>
+
         </ul>
     </nav>
 </header>
 <main class="layout">
-<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum facilis laboriosam laborum libero placeat porro quasi. Consequuntur fuga hic ipsam quasi quidem ratione saepe sapiente soluta tempore voluptatem? Accusantium, perferendis, totam. Accusamus amet architecto at corporis dolore dolores eveniet explicabo, ipsa laboriosam magni maiores maxime obcaecati odit? Asperiores deleniti, ducimus illo iste mollitia nam natus totam. Atque iusto recusandae rem?</p>
+    <ul>
+        <li><a href="cragmaw-castle.html">cragmaw castle</a></li>
+        <li><a href="phandalin.html">phandalin</a></li>
+        <li><a href="redbrand-hideout.html">redbrand hideout</a></li>
+        <li><a href="thundertree.html">tundertree</a></li>
+    </ul>
 </main>
 <footer>
-7
+
 </footer>
 </html>
