--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../styling/main-styling.css">
     <meta charset="UTF-8">
     <title>DnD-MapTool</title>
+    <script src="../js/fullscreen.js"></script>
 </head>
 <header>
     <nav class="header-links">
@@ -15,19 +16,20 @@
             <li><A>Tool1</A></li>
             <li><A>Tool2</A></li>
             <li><A>Tool3</A></li>
-
         </ul>
     </nav>
 </header>
 <main class="layout">
     <ul>
-        <li><a href="cragmaw-castle.html">cragmaw castle</a></li>
-        <li><a href="phandalin.html">phandalin</a></li>
-        <li><a href="redbrand-hideout.html">redbrand hideout</a></li>
-        <li><a href="thundertree.html">tundertree</a></li>
+        <li><img class="map" src="../assets/maps/phandalin.jpg" alt="" /></li>
+        <li><img class="map" src="../assets/maps/redbrand_hideout.jpg" alt="" /></li>
+        <li><img class="map" src="../assets/maps/thundertree.jpg" alt="" /></li>
+        <li><img class="map" src="../assets/maps/cragmaw_castle.jpg" alt="" /></li>
+
     </ul>
 </main>
 <footer>
 
 </footer>
+
 </html>
