added close button and CSS clean-up

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 </head>
 <header>
     <nav class="header-links">
-        <h1>Dod Maps</h1>
+        <h1>D&D Maps</h1>
         <ul>
             <li><A>Tool1</A></li>
             <li><A>Tool2</A></li>
@@ -21,7 +21,7 @@
         </ul>
     </nav>
 </header>
-<main class="layout">
+<main class="map-thumnail">
     <ul>
         <li>
             <h3>Phandalin</h3>
